more refactor around traverser, fix concurrency bug in ServiceReasons